# walhalla-kmp

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
.kotlin/metadata/kotlinTransformedMetadataLibraries/: be.digitalia.compose.htmlconverter-htmlconverter-1.1.1-commonMain-8-Cp0w.klib  co.touchlab-kermit-2.0.3-commonMain-PhOYsA.klib  co.touchlab-kermit-2.0.3-nativeMain-PhOYsA.klib  co.touchlab-kermit-core-2.0.3-appleMain-WBU2sg.klib  co.touchlab-kermit-core-2.0.3-commonMain-sXpuEA.klib  co.touchlab-kermit-core-2.0.3-nativeMain-sXpuEA.klib  com.chrynan.uri-uri-core-0.4.0-commonMain-e3xY4w.klib  com.chrynan.validator-validator-core-0.6.0-commonMain-dwkn0Q.klib  com.chrynan.validator-validator-web-0.6.0-commonMain-WCmvAw.klib  dev.icerock.moko-permissions-0.20.1-commonMain-U7LhVg.klib  dev.icerock.moko-permissions-0.20.1-iosMain-kJV58w.klib  dev.icerock.moko-permissions-compose-0.20.1-commonMain-g5UXvg.klib  dev.icerock.moko-permissions-compose-0.20.1-iosMain-Jv_Esg.klib  dev.icerock.moko-permissions-notifications-0.20.1-commonMain-RZGMjA.klib  dev.icerock.moko-permissions-notifications-0.20.1-iosMain-pn-dBQ.klib  io.github.ishumakov881-kmpnotifier-1.6.7-commonMain-hswBmg.klib  io.github.ishumakov881-kmpnotifier-1.6.7-iosMain-XOw8Fg.klib  io.github.kevinnzou-compose-webview-multiplatform-2.0.3-commonMain-QVGjmA.klib  io.github.kevinnzou-compose-webview-multiplatform-2.0.3-iosMain-oGgcfQ.klib  io.insert-koin-koin-compose-4.2.1-commonMain-p-mx3w.klib  io.insert-koin-koin-compose-4.2.1-nativeMain-UnjamA.klib  io.insert-koin-koin-compose-viewmodel-4.2.1-commonMain-BQbPrw.klib  io.insert-koin-koin-core-4.2.1-commonMain-re7ppg.klib  io.insert-koin-koin-core-4.2.1-nativeMain-re7ppg.klib  io.insert-koin-koin-core-viewmodel-4.2.1-commonMain-DKcyAQ.klib  io.ktor-ktor-client-core-3.5.0-commonMain-uQUAjw.klib  io.ktor-ktor-client-core-3.5.0-jvmAndPosixMain-uQUAjw.klib  io.ktor-ktor-client-core-3.5.0-nonJvmMain-uQUAjw.klib  io.ktor-ktor-client-core-3.5.0-posixMain-uQUAjw.klib  io.ktor-ktor-client-darwin-3.5.0-darwinMain-wADxFg.klib  io.ktor-ktor-events-3.5.0-commonMain-uuFDaw.klib  io.ktor-ktor-http-3.5.0-commonMain-IO4VSw.klib  io.ktor-ktor-http-3.5.0-posixMain-IO4VSw.klib  io.ktor-ktor-http-cio-3.5.0-commonMain-MJz0bQ.klib  io.ktor-ktor-http-cio-3.5.0-jvmAndPosixMain-MJz0bQ.klib  io.ktor-ktor-http-cio-3.5.0-posixMain-MJz0bQ.klib  io.ktor-ktor-io-3.5.0-commonMain-tLZSlQ.klib  io.ktor-ktor-io-3.5.0-darwinMain-j26R_A.klib  io.ktor-ktor-io-3.5.0-jvmAndPosixMain-tLZSlQ.klib  io.ktor-ktor-io-3.5.0-posixMain-tLZSlQ.klib  (+38 more)
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/net/example/online/: ContextHelper.kt  MainActivity.kt  MainApp.kt  Platform.android.kt
composeApp/src/androidMain/res/values/: colors.xml  strings.xml
composeApp/src/androidMain/res/values-ru/: strings.xml
composeApp/src/commonMain/composeResources/values/: strings.xml
composeApp/src/commonMain/composeResources/values-ru/: strings.xml
device-kit/: README.md  build.gradle.kts
device-kit/src/androidMain/: AndroidManifest.xml
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/: GoogleService-Info.plist
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: Info.plist  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
nointernet/: build.gradle.kts
nointernet/src/commonMain/composeResources/drawable/: ic_airplane.xml  ic_airplanemode_inactive.xml  ic_swap_vert.xml  ic_wifi.xml
nointernet/src/commonMain/composeResources/values/: strings.xml
nointernet/src/commonMain/composeResources/values-ru/: strings.xml
sip/: build.gradle.kts
sip/native/: CMakeLists.txt  baresip_sources.cmake  baresip_sources_ios.cmake  build-ios.sh  opus_sources.cmake  telephony.c  telephony.h  telephony_kn.c  telephony_kn.h  telephony_notify.c  telephony_platform.h  wrapper.c
sip/native/baresip/mk/: static.c  static_ios.c
sip/native/baresip/modules/opensles/: player.c
sip/native/baresip/modules/opus/: decode.c  encode.c  opus.c  sdp.c
sip/native/baresip/modules/opus_multistream/: decode.c  encode.c  opus_multistream.c  sdp.c
sip/native/baresip/src/: conf.c
sip/native/ios/: CMakeLists.txt
sip/native/re/include/: re_types.h
sip/src/androidMain/: AndroidManifest.xml
sip/src/commonMain/kotlin/net/lds/sip/: SipEngine.kt  (+3 more)
sip/src/nativeInterop/cinterop/: telephony.def
(+106 files in other folders)
